Fix tag wrap

--- a/src/blog/src/style.css
+++ b/src/blog/src/style.css
@@ -330,6 +330,7 @@ footer > div {
 .tag-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin: var(--spacing-0);
   text-transform: capitalize;
 }
